fix(frontend): set auto z-index for certain leaflet elements & remove hard coded width of popover

--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.leaflet-pane, .leaflet-top, .leaflet-bottom {
+  z-index: auto !important;
+}
+
 @layer base {
   :root {
     --background: 0 0% 98%;
